--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.username = root
 spring.datasource.password = root
 
 
-
+spring.jpa.open-in-view=true
 spring.jooq.sql-dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql = true
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 
 spring.thymeleaf.encoding=UTF-8
